--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@ethersproject/contracts": "^5.7.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.8.10",
-    "@nimi.io/card": "nimi-app/card#a9eef8ec9bc031d50f77305a290f1beab65b4c86",
+    "@nimi.io/card": "nimi-app/card#v0.13.0",
     "@rainbow-me/rainbowkit": "^0.8.0",
     "@tanstack/react-query": "^4.16.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -62,9 +62,11 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
